Update servlets
Add JSON support for servlets:
	GarageServlet
	UserServlet
	OrderServlet
And Model Objects:
	Car
	Item
	Order